force-app/main/default/objects/hed__Term_Grade__c/fields/hed__Contact__c.field-meta.xml
<CustomField>
    <fullName>hed__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The student for whom the grade is being recorded. When left blank, Contact autopopulates from the valid Course Connection on save.</description>
    <inlineHelpText>L’étudiant pour qui la note est enregistrée. Lorsqu’il est laissé vide, le champ Contact est rempli automatiquement à partir de la connexion de cours valide lors de l’enregistrement.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Term Grades</relationshipLabel>
    <relationshipName>Term_Grades</relationshipName>
    <type>Lookup</type>
</CustomField>