force-app/main/default/objects/hed__Term_Grade__c/fields/hed__Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>hed__Course_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Course Offering associated with the grade being recorded. When left blank, Course Offering autopopulates from the valid Course Connection on save.</description>
    <inlineHelpText>L’offre de cours associée à la note enregistrée. Lorsqu’il est laissé vide, le champ Offre de cours est rempli automatiquement à partir de la connexion de cours valide lors de l’enregistrement.</inlineHelpText>
    <label>Course Offering</label>
    <referenceTo>hed__Course_Offering__c</referenceTo>
    <relationshipLabel>Term Grades</relationshipLabel>
    <relationshipName>Term_Grades</relationshipName>
    <type>Lookup</type>
</CustomField>