force-app/main/default/objects/hed__Term_Grade__c/fields/hed__Credits_Attempted__c.field-meta.xml
<CustomField>
    <fullName>hed__Credits_Attempted__c</fullName>
    <description>The number of credits available this Term for this Course.</description>
    <inlineHelpText>Le nombre de crédits disponibles pour ce cours pendant cette période.</inlineHelpText>
    <label>Credits Attempted</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>