force-app/main/default/objects/hed__Term_Grade__c/fields/hed__Letter_Grade__c.field-meta.xml
<CustomField>
    <fullName>hed__Letter_Grade__c</fullName>
    <description>If your school uses letter grades, enter the letter grade the student earned, for example, A, B, C, etc.</description>
    <inlineHelpText>Si votre école utilise des lettres pour désigner les notes, saisissez la lettre que l&apos;étudiant a obtenue, par exemple A, B, C, etc.</inlineHelpText>
    <label>Letter Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>