force-app/main/default/objects/hed__Term_Grade__c/fields/hed__Numerical_Grade__c.field-meta.xml
<CustomField>
    <fullName>hed__Numerical_Grade__c</fullName>
    <description>If your school uses numeric grades, enter the numeric grade the student earned.</description>
    <inlineHelpText>Si votre école utilise des chiffres pour désigner les notes, saisissez la note numérique que l&apos;étudiant a obtenue.</inlineHelpText>
    <label>Numerical Grade</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>