force-app/main/default/objects/hed__Term_Grade__c/fields/hed__Percent_Grade__c.field-meta.xml
<CustomField>
    <fullName>hed__Percent_Grade__c</fullName>
    <description>If your school grades on a percentage basis, enter the percentage grade the student earned.</description>
    <inlineHelpText>Si votre école utilise des pourcentages pour désigner les notes, saisissez le pourcentage que l&apos;étudiant a obtenu.</inlineHelpText>
    <label>Percent Grade</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>